k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsdashboard-ingress
  namespace: devops-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false" # Uncomment for local dev without SSL
spec:
  # ingressClassName: nginx
  rules:
    - host: devopsdashboard.local # Add this to your /etc/hosts mapping to 127.0.0.1 (or minikube ip)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dashboard-apigw-service
                port:
                  number: 8000
